Auto Shut-OFF_SOIC8.cydsn/CortexM0/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 12/22/2016 15:30:10 Project: Auto Shut-OFF_SOIC8, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_493\Debug\main.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\cymetadata.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\PUSH_BUTTON_INPUT.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\SUPPLY_ENABLE.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\PWM.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\PWM_PM.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\PWM_OUTPUT.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\PWM_CLOCK.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\PWM_isr.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\Push_Button_isr.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\Cm0Start.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\CyFlash.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\CyLib.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\cyPm.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\cyutils.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\CyLFClk.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\SW_Tx_UART_AsmGnu.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\SW_Tx_UART.o"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\Auto Shut-OFF_SOIC8.hex"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\Auto Shut-OFF_SOIC8.elf"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\Auto Shut-OFF_SOIC8.map"
Deleting file ".\Auto Shut-OFF_SOIC8.cycdx"
Deleting file ".\Auto Shut-OFF_SOIC8.rpt"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\.deps\C_FILE.P"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\.deps\ARM_C_FILE.P"
Deleting file ".\CortexM0\ARM_GCC_493\Debug\.deps\GNU_ARM_ASM_FILE.P"
cydsfit.exe -.appdatapath "C:\Users\Spitfire54444444\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "C:\Users\Spitfire54444444\Dropbox\Projets\Wavelab Technologies Inc\RnD\Projets\Auto Shut-OFF\Auto-Shut-OFF\Auto Shut-OFF_SOIC8.cydsn\Auto Shut-OFF_SOIC8.cyprj" -d CY8C4013SXI-400 -s "C:\Users\Spitfire54444444\Dropbox\Projets\Wavelab Technologies Inc\RnD\Projets\Auto Shut-OFF\Auto-Shut-OFF\Auto Shut-OFF_SOIC8.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
ADD: pft.M0040: information: The following 1 pin(s) will be assigned a location by the fitter: \SW_Tx_UART:tx(0)\
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Info: pft.M0077: There is no timing information available for the selected device. Static timing checks will not be applied and digital routing will not be timing-driven. (App=cydsfit)
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c ..\Common\main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
..\Common\main.c: In function 'main':
..\Common\main.c:29:9: warning: implicit declaration of function 'I2C_I2CSlaveInitReadBuf' [-Wimplicit-function-declaration]
         I2C_I2CSlaveInitReadBuf (i2cReadBuffer,  BUFFER_SIZE);
         ^
..\Common\main.c:30:9: warning: implicit declaration of function 'I2C_I2CSlaveInitWriteBuf' [-Wimplicit-function-declaration]
         I2C_I2CSlaveInitWriteBuf(i2cWriteBuffer, BUFFER_SIZE);
         ^
..\Common\main.c:31:9: warning: implicit declaration of function 'I2C_Start' [-Wimplicit-function-declaration]
         I2C_Start();
         ^
..\Common\main.c:49:9: warning: implicit declaration of function 'R_Write' [-Wimplicit-function-declaration]
         R_Write( 1 );
         ^
..\Common\main.c:50:9: warning: implicit declaration of function 'G_Write' [-Wimplicit-function-declaration]
         G_Write( 1 );
         ^
..\Common\main.c:51:9: warning: implicit declaration of function 'B_Write' [-Wimplicit-function-declaration]
         B_Write( 1 );
         ^
..\Common\main.c:309:13: warning: implicit declaration of function 'I2C_I2CSlaveStatus' [-Wimplicit-function-declaration]
             if (0u != (I2C_I2CSlaveStatus() & I2C_I2C_SSTAT_WR_CMPLT))
             ^
..\Common\main.c:309:47: error: 'I2C_I2C_SSTAT_WR_CMPLT' undeclared (first use in this function)
             if (0u != (I2C_I2CSlaveStatus() & I2C_I2C_SSTAT_WR_CMPLT))
                                               ^
..\Common\main.c:309:47: note: each undeclared identifier is reported only once for each function it appears in
..\Common\main.c:312:17: warning: implicit declaration of function 'I2C_I2CSlaveGetWriteBufSize' [-Wimplicit-function-declaration]
                 if (PACKET_SIZE == I2C_I2CSlaveGetWriteBufSize())
                 ^
..\Common\main.c:323:17: warning: implicit declaration of function 'I2C_I2CSlaveClearWriteBuf' [-Wimplicit-function-declaration]
                 I2C_I2CSlaveClearWriteBuf();
                 ^
..\Common\main.c:324:17: warning: implicit declaration of function 'I2C_I2CSlaveClearWriteStatus' [-Wimplicit-function-declaration]
                 (void) I2C_I2CSlaveClearWriteStatus();
                 ^
..\Common\main.c:334:47: error: 'I2C_I2C_SSTAT_RD_CMPLT' undeclared (first use in this function)
             if (0u != (I2C_I2CSlaveStatus() & I2C_I2C_SSTAT_RD_CMPLT))
                                               ^
..\Common\main.c:337:17: warning: implicit declaration of function 'I2C_I2CSlaveClearReadBuf' [-Wimplicit-function-declaration]
                 I2C_I2CSlaveClearReadBuf();
                 ^
..\Common\main.c:338:17: warning: implicit declaration of function 'I2C_I2CSlaveClearReadStatus' [-Wimplicit-function-declaration]
                 (void) I2C_I2CSlaveClearReadStatus();
                 ^
..\Common\main.c: In function 'GetTimeBitsValue':
..\Common\main.c:573:5: warning: implicit declaration of function 'Time_Bit_0_Read' [-Wimplicit-function-declaration]
     if( Time_Bit_0_Read() == 1 )
     ^
..\Common\main.c:582:5: warning: implicit declaration of function 'Time_Bit_1_Read' [-Wimplicit-function-declaration]
     if( Time_Bit_1_Read() == 1 )
     ^
..\Common\main.c:591:5: warning: implicit declaration of function 'Time_Bit_2_Read' [-Wimplicit-function-declaration]
     if( Time_Bit_2_Read() == 1 )
     ^
..\Common\main.c:600:5: warning: implicit declaration of function 'Time_Bit_3_Read' [-Wimplicit-function-declaration]
     if( Time_Bit_3_Read() == 1 )
     ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
..\Common\main.c:609:5: warning: implicit declaration of function 'Mode_Read' [-Wimplicit-function-declaration]
     if( Mode_Read() == 1 )
     ^
--------------- Rebuild Failed: 12/22/2016 15:30:15 ---------------
